// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateDropdownPicker /> should render in english with date 1`] = `
<div
  className="globalClassName"
>
  <label
    className="sm-3"
    htmlFor="day"
  >
    my-label-id
  </label>
  <div
    className="className"
    id="myId"
  >
    <div
      id="day"
    >
      <DayPicker
        classes="form-control"
        defaultValue="Day"
        disabled={false}
        id="day"
        month="04"
        name="day"
        onChange={[Function]}
        value="25"
        year="1990"
      />
    </div>
    <div
      id="month"
    >
      <MonthPicker
        classes="form-control"
        defaultValue="month"
        disabled={false}
        id="month"
        locale="FR"
        name="month"
        onChange={[Function]}
        value="04"
        year="1990"
      />
    </div>
    <div
      id="year"
    >
      <YearPicker
        classes="form-control"
        defaultValue="year"
        disabled={false}
        id="year"
        name="year"
        onChange={[Function]}
        value="1990"
      />
    </div>
  </div>
</div>
`;

exports[`<DateDropdownPicker /> should render in english without date and disabled 1`] = `
<div
  className="globalClassName"
>
  <label
    className="sm-3"
    htmlFor="day"
  >
    my-label-id
  </label>
  <div
    className="className"
    id="myId"
  >
    <div
      id="day"
    >
      <DayPicker
        classes="form-control"
        defaultValue="Day"
        disabled={true}
        id="day"
        month={null}
        name="day"
        onChange={[Function]}
        value={null}
        year={null}
      />
    </div>
    <div
      id="month"
    >
      <MonthPicker
        classes="form-control"
        defaultValue="month"
        disabled={true}
        id="month"
        locale="FR"
        name="month"
        onChange={[Function]}
        value={null}
        year={null}
      />
    </div>
    <div
      id="year"
    >
      <YearPicker
        classes="form-control"
        defaultValue="year"
        disabled={true}
        id="year"
        name="year"
        onChange={[Function]}
        value={null}
      />
    </div>
  </div>
</div>
`;
